testament/tests/shouldfail/tline.nim
discard """
line: 9
column: 6
errormsg: "undeclared identifier: 'undeclared'"
"""

# test should fail because the line directive is wrong
echo undeclared
